--- a/dependencies/Dockerfile
+++ b/dependencies/Dockerfile
@@ -16,43 +16,30 @@ ENV PYTHONDONTWRITEBYTECODE=1
 # the application crashes without emitting any logs due to buffering.
 ENV PYTHONUNBUFFERED=1
 
-WORKDIR /TechAssignment/
+WORKDIR /TechAssignment
 COPY . .
-RUN uv sync
-ENV PATH="/.venv"
-
-WORKDIR /app
-
 # Create a non-privileged user that the app will run under.
 # See https://docs.docker.com/go/dockerfile-user-best-practices/
-ARG UID=10001
-RUN adduser \
-    --disabled-password \
-    --gecos "" \
-    --home "/nonexistent" \
-    --shell "/sbin/nologin" \
-    --no-create-home \
-    --uid "${UID}" \
-    appuser
 
+RUN apt-get update && apt-get install -y \
+    gcc \
+    && rm -rf /var/lib/apt/lists/*
 # Download dependencies as a separate step to take advantage of Docker's caching.
 # Leverage a cache mount to /root/.cache/pip to speed up subsequent builds.
 # Leverage a bind mount to requirements.txt to avoid having to copy them into
 # into this layer.
 RUN --mount=type=cache,target=/root/.cache/pip \
     --mount=type=bind,source=requirements.txt,target=requirements.txt \
-    uv pip install -r requirements.txt
-RUN uv pip install "fastapi[standard]"
-RUN uv sync 
+    python -m pip install -r requirements.txt
+
 # Switch to the non-privileged user to run the application.
-USER appuser
+
 
 # Copy the source code into the container.
 COPY . .
-
+RUN mkdir -p uploads
 # Expose the port that the application listens on.
 EXPOSE 8000
-HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
-    CMD python -c "import requests; requests.get('http://localhost:8000/health')" || exit 1
+
 # Run the application.
-CMD ["fastapi", "run", "app/main.py"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
