--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "fastapi[standard]>=0.116.1",
     "pip>=25.2",
     "pypdf>=6.0.0",
+    "pytest>=8.4.1",
+    "python-dotenv>=1.1.1",
     "ruff>=0.12.11",
     "spacy>=3.8.7",
 ]
